--- a/.gitignore
+++ b/.gitignore
@@ -62,3 +62,5 @@ crashlytics-build.properties
 UserSettings/EditorUserSettings.asset
 
 Assets/08 - Fonts/Grandma 1.otf
+
+ProjectSettings/EditorBuildSettings.asset
